--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "homepage": "https://github.com/Ganyu-Studios/seyfert-html-transcripts",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p tsconfig.json",
     "prepack": "npm run build",
-    "test:typescript": "tsx ./tests/generate.ts",
+    "test": "tsx ./tests/generate.ts",
     "lint": "prettier --write --cache . && eslint --cache --fix .",
     "typecheck": "tsc -p tsconfig.eslint.json"
   },
@@ -36,7 +35,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.31.0",
     "@types/debug": "^4.1.12",
-    "@types/node": "^24.0.14",
+    "@types/node": "^24.0.15",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
@@ -61,7 +60,7 @@
     "seyfert": "github:tiramisulabs/seyfert",
     "simple-markdown": "^0.7.3",
     "twemoji": "^14.0.2",
-    "undici": "^7.11.0"
+    "undici": "^7.12.0"
   },
   "peerDependencies": {
     "seyfert": "^3.2.4"
