yay, this is now up-to-date

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@eslint/js": "^9.31.0",
     "@types/debug": "^4.1.12",
     "@types/node": "^24.0.15",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
     "debug": "^4.4.1",
@@ -46,7 +46,6 @@
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "prettier": "^3.6.2",
-    "pretty-quick": "^4.2.2",
     "sharp": "^0.34.3",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
@@ -55,8 +54,8 @@
     "@derockdev/discord-components-core": "^3.6.1",
     "@derockdev/discord-components-react": "^3.6.1",
     "discord-markdown-parser": "~1.2.0",
-    "react": "0.0.0-experimental-6639ed3b3-20240111",
-    "react-dom": "0.0.0-experimental-6639ed3b3-20240111",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "seyfert": "github:tiramisulabs/seyfert",
     "simple-markdown": "^0.7.3",
     "twemoji": "^14.0.2",
